--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,5 @@
+[workspace]
+
 [package]
 name = "bikecleats"
 version = "0.0.0"
@@ -13,3 +15,4 @@ categories = ["command-line-utilities"]
 publish = false
 
 [dependencies]
+bikecleats_testsuite = { version = "0.0.0", path = "./bikecleats_testsuite" }
