--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ publish = false
 [dependencies]
 bikecleats_judge = { version = "0.0.0", path = "./bikecleats_judge" }
 bikecleats_testsuite = { version = "0.0.0", path = "./bikecleats_testsuite" }
+bikecleats_web = { version = "0.0.0", path = "./bikecleats_web" }
