--- a/bikecleats_web/Cargo.toml
+++ b/bikecleats_web/Cargo.toml
@@ -23,26 +23,28 @@ __test_with_credentials = []
 [dependencies]
 anyhow = "1.0.40"
 atty = "0.2.14"
+bikecleats_testsuite = { path = "../bikecleats_testsuite" }
 camino = "1.0.4"
 chrono = { version = "0.4.19", features = ["serde"] }
 cookie = "0.15.0"
 cookie_store = "0.13.3"
+derivative = "2.2.0"
 derive_more = "0.99.13"
-either = "1.6.1"
+easy-ext = "0.2.7"
 form_urlencoded = "1.0.1"
 fs2 = "0.4.3"
 futures-util = "0.3.14"
 fwdansi = "1.1.0"
 http = "0.2.4"
 indexmap = { version = "1.6.2", features = ["serde-1"] }
-indicatif = { version = "0.15.0", features = ["improved_unicode", "rayon"] }
+indicatif = { version = "0.16.0", features = ["improved_unicode", "rayon"] }
 itertools = "0.10.0"
 maplit = "1.0.2"
 nipper = "0.1.9"
 num_cpus = "1.13.0"
 once_cell = "1.7.2"
 percent-encoding = "2.1.0"
-regex = "1.4.6"
+regex = "1.5.1"
 reqwest = { version = "0.11.3", features = ["blocking", "cookies", "json", "rustls-tls", "stream", "trust-dns"] }
 scraper = "0.12.0"
 serde = { version = "1.0.125", features = ["derive"] }
@@ -51,6 +53,7 @@ sha2 = "0.9.3"
 strum = { version = "0.20.0", features = ["derive"] }
 tempfile = "3.2.0"
 termcolor = "1.1.2"
+tokio = { version = "1.4.0", features = ["io-util", "rt-multi-thread", "sync", "time"] }
 unicode-width = "0.1.8"
 url = "2.2.1"
 
